fix gap error on investment overlays

--- a/content/themes/ssp/src/sass/_investments.sass
+++ b/content/themes/ssp/src/sass/_investments.sass
@@ -56,6 +56,7 @@
       top: 0
       left: 0
       width: 100%
+      height: 100%
       padding-top: 40%
       opacity: 0
       transition: all 0.5s ease-in-out
